services/plex/kube-plex-server-public-lb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-server-public
spec:
  type: LoadBalancer
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
  selector:
    app: kube-plex
    release: plex-server
