services/plex/ingress.yml
# media.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: "media"
  name: "plex-ingress"
spec:
  rules:
  - host: "livingroom.cloud"
    http:
      paths:
        - backend:
            serviceName: "plex-kube-plex"
            servicePort: 32400
          path: "/"
---
